<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingVertical="36dp"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_fragment_avatar"
                android:layout_width="124dp"
                android:layout_height="124dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground"
                app:shapeAppearance="@style/roundedImageView"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_fragment_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="100dp"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.customHeadline1"

                 />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_fragment_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_username" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_fragment_logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_fragment_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/md_theme_error"
                android:text="@string/delete_account"
                android:textColor="@color/md_theme_onError" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
</layout>