<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bookmarked"
            type="com.northcoders.media_tracker_front.model.Bookmarked" />
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".fragments.BookmarkedDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/profilepicturebookmarked"
            android:layout_marginTop="35dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:background="@drawable/circularcustombutton"
            />

        <!--When using a RatingBar that supports user interaction, placing widgets to
            the left or right of the RatingBar is discouraged. - android docs-->

        <!--        //background there for testing only-->
        <ImageView
            android:id="@+id/bookmarked_fragment_image"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:background="@color/md_theme_error"
            android:contentDescription="movie poster"
            android:src="@drawable/vhs_stack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--        //needs work for longer titles-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bookmarked_fragment_title"
            style="@style/TextAppearance.myH1_serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:maxLines="2"
            android:text="@{bookmarked.userFilmId.film.title}"
            android:hint="Title"
            app:layout_constraintStart_toEndOf="@id/bookmarked_fragment_image"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/bookmarked_text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/bookmarked_fragment_image"
            app:layout_constraintTop_toBottomOf="@id/bookmarked_fragment_title">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bookmarked_year"
                style="@style/TextAppearance.myBody1_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(bookmarked.userFilmId.film.releaseYear)}"
                android:hint="Year" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bookmarked_runtime"
                style="@style/TextAppearance.myBody1_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(bookmarked.userFilmId.film.duration)}"
                android:hint="run time" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bookmarked_genres"
                style="@style/TextAppearance.myBody1_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="genres"
                android:text="@{bookmarked.userFilmId.film.genres[0]}"/>

            <!--            ideally these would have a label-->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bookmarked_language"
                style="@style/TextAppearance.myBody1_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="language"
                android:text="@{bookmarked.userFilmId.film.language}"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bookmarked_country"
                style="@style/TextAppearance.myBody1_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="country"
                android:text="@{bookmarked.userFilmId.film.country}"/>


        </LinearLayout>

        <!--        ideally should have label-->
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bookmarked_status_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/bookmarked_fragment_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bookmarked_fragment_image"
            android:checked="true" />

        <!--needs replacing  - look into icon button or make background round - 2 states -->

        <ImageButton
            android:id="@+id/bookmarked_fragment_bookmark_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/md_theme_tertiary"
            android:contentDescription="@string/bookmark_icon_outline"
            android:scaleType="fitCenter"
            android:translationZ="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookmarked_status_switch"
            app:srcCompat="@drawable/ic_bookmark_tab_foreground"
            app:tint="@color/md_theme_inversePrimary" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bookmarked_fragment_details_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookmarked_fragment_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <TextView
                    android:id="@+id/bookmarked_fragment_details_heading"
                    style="@style/TextAppearance.myH2_sans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:text="Summary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/TextAppearance.myBody1_sans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:text="@{bookmarked.userFilmId.film.synopsis}"
                    android:hint="@string/mock_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bookmarked_fragment_details_heading" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <RatingBar
            android:id="@+id/bookmarked_fragment_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookmarked_fragment_details_card" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bookmarked_fragment_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookmarked_fragment_rating_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <TextView
                    android:id="@+id/bookmarked_fragment_notes_heading"
                    style="@style/TextAppearance.myH2_sans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_notes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bookmarked_fragment_notes_input"
                    style="@style/TextAppearance.myBody1_sans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_notes_here"
                    android:text="@={bookmarked.notes}"
                    android:maxLines="10"
                    android:minLines="10"
                    android:scrollbars="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bookmarked_fragment_notes_heading" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bookmarked_fragment_back_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
    </layout>